--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,44 @@
 @charset "UTF-8";
 
+:root {
+	--fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Merriweather", sans-serif,
+		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	--fonts-serif: "Merriweather", Georgia, Garamond, serif;
+	--fonts-mono: "Souce Code Pro", "Courier New", monospace;
+}
+
+html, input {
+	font-size: clamp(1em, 1.3vw, 1.3em);
+}
+
 body {
-	margin: 0;
-	padding: 0;
-	background: black;
+	margin: 0 auto;
+	max-width: 80ch;
+	font-family: var(--fonts);
+}
+
+pre {
+	font-family: var(--fonts-mono);
+}
+
+h1, h2, h3 {
+	text-align: center;
+}
+
+input {
+	margin: 1rem;
+	padding: .5rem;
+}
+
+label {
+	margin-left: 1rem;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+}
+
+.text-center {
+	text-align: center;
 }
